# reddit_ideas

backend/: .env  .gitignore  Cargo.toml
backend/src/: main.rs
frontend/src/: App.css  App.jsx
frontend/src/components/: Footer.jsx  Navbar.jsx  ResultCard.jsx
