[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime Axum runs on
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }

# For making HTTP requests to Reddit and LLMs
reqwest = { version = "0.11", features = ["json", "gzip"] }

# For working with JSON data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error and logging utilities
anyhow = "1.0"
tracing = "0.1"

# Optional middleware like CORS (we’ll use it later)
tower-http = { version = "0.5", features = ["cors"] }
